@@ -208,12 +208,10 @@ check_list = [
             'doc/user/SCons-win32-install-4.jpg',
             'examples',
             'gentoo',
-            'QMTest/classes.qmc',
-            'QMTest/configuration',
-            'QMTest/TestCmd.py',
-            'QMTest/TestCmdTests.py',
-            'QMTest/TestCommon.py',
-            'QMTest/TestCommonTests.py',
+            'testing/framework/TestCmd.py',
+            'testing/framework/TestCmdTests.py',
+            'testing/framework/TestCommon.py',
+            'testing/framework/TestCommonTests.py',
             'src/MANIFEST.in',
             'src/setup.cfg',
             'src/engine/MANIFEST.in',
